bug fixes for scrollbars on charts that are over 600px and label overlap issues

--- a/sugarcrm/custom/include/SugarCharts/css/base.css
+++ b/sugarcrm/custom/include/SugarCharts/css/base.css
@@ -37,6 +37,11 @@
 	width: 100%
 	}
 	
+.chartContainer .scrollBars {
+	overflow: auto;
+	max-height: 600px;	
+}
+
 .chartCanvas {
     position:relative;
     margin:auto;
